--- a/server-side/express/express-locallibrary-tutorial/views/bookinstance_delete.pug
+++ b/server-side/express/express-locallibrary-tutorial/views/bookinstance_delete.pug
@@ -1,10 +1,7 @@
 extends layout
 
 block content
-
-    h1 ID: #{bookinstance._id}
-
-    p #[strong Title:]
+    h1 #[strong Title:]
         a(href=bookinstance.book.url) #{bookinstance.book.title}
     p #[strong Imprint:] #{bookinstance.imprint}
 
@@ -16,9 +13,10 @@ block content
         else
             span.text-warning #{bookinstance.status}
 
-    if bookinstance.status!='Available'
-        p #[strong Due back:] #{bookinstance.due_back_formatted}
+    p Do you really want to delete this Book Instance?
 
-    hr
-    p
-        a(href=bookinstance.url+'/delete') Delete book instance
+    form(method='POST' action='')
+        div.form-group
+            input#bookinstanceid.form-control(type='hidden',name='bookinstanceid',required='ture',value=bookinstance._id)
+
+        button.btn.btn-primary(type='submit') Delete
